add photos in section work,change webp for png, and adjust css for more elegancy

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>My mission is to design and develop a website that you and your audience love.</p>
         <a href="https://wa.me/573001234567" class="btn-wa" target="_blank">
           Happy to chat on WhatsApp
-          <img src="assets/img/team/whatsapp.svg" alt="WhatsApp icon" />
+          <img src="assets/img/team/whats.png" alt="WhatsApp icon" />
         </a>
       </div>
     </section>
