adjust text in html archives

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,10 +12,6 @@
         <div class="status-wrapper">
             <span class="top-text">Experts in solutions</span>
             <span class="status">Available <span class="dot"></span> for work</span>
-            <select class="language-selector">
-                <option value="EN" selected>EN</option>
-                <option value="ES">ES</option>
-            </select>
         </div>
     </div>
 
@@ -24,7 +20,7 @@
             <h2>OUR STORY</h2>
             <h1 class="glow-text">United by Passion, Driven by Innovation</h1>
             <p>
-                Nestled in the heart of Ocaña, Norte de Santander, Colombia, **Community Team** was born. This initiative was sparked by a group of colleagues and friends who share a deep passion for software development and crafting tailored technological solutions. Our story began like many great ideas: with informal conversations, shared coding nights, and the conviction that together, we could achieve more ambitious and impactful projects.
+                 **Community Team** was born. This initiative was sparked by a group of colleagues and friends who share a deep passion for software development and crafting tailored technological solutions. Our story began like many great ideas: with informal conversations, shared coding nights, and the conviction that together, we could achieve more ambitious and impactful projects.
             </p>
             <p>
                 We are more than just a team; we are a **community of creative and analytical minds**, united by the universal language of code. Since our inception, we have dedicated ourselves to honing our skills across various development areas, from elegant user interfaces (Frontend) to robust backend logic, including the creation of innovative mobile applications.
