--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Community Team - Webflow Expert</title>
+  <title>Community Team</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
@@ -27,10 +27,10 @@
 
       <div class="hero-right">
         <h2>DESIGNER & WEBFLOW EXPERT</h2>
-        <h1 class="glow-text">Agency‑level web development services at freelancer rates</h1>
-        <p>My mission is to design and develop a website that you and your audience love.</p>
-        <a href="https://wa.me/573001234567" class="btn-wa" target="_blank">
-          Happy to chat on WhatsApp
+        <h1 class="glow-text">Agency‑level web, mobile and desktop development services at freelancer rates</h1>
+        <p>Our mission as a team is to develop your custom software. We are a trusted team with the best skills in both frontend and backend.</p>
+        <a href="https://wa.me/573045517255" class="btn-wa" target="_blank">
+          Contact us via WhatsApp
           <img src="assets/img/team/whats.png" alt="WhatsApp icon" />
         </a>
       </div>
