--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Team - Community Team</title>
+    <title>Work - Community Team</title>
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
@@ -12,10 +12,6 @@
         <div class="status-wrapper">
             <span class="top-text">Experts in solutions</span>
             <span class="status">Available <span class="dot"></span> for work</span>
-            <select class="language-selector">
-                <option value="EN">EN</option>
-                <option value="ES">ES</option>
-            </select>
         </div>
     </div>
 
