--- a/services.html
+++ b/services.html
@@ -8,7 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <div class="background-carousel">
+        <div class="carousel-image" style="background-image: url('assets/logos/picone.png');"></div>
+        <div class="carousel-image" style="background-image: url('assets/logos/pictwo.png');"></div>
+        <div class="carousel-image" style="background-image: url('assets/logos/picthree.png');"></div>
+        <div class="carousel-image" style="background-image: url('assets/logos/picfour.png');"></div>
+        <div class="carousel-image" style="background-image: url('assets/logos/picfive.png');"></div>
+    </div>
     <div class="top-bar">
         <div class="logo-header">Community Team</div>
         <div class="status-wrapper">
