--- a/work.html
+++ b/work.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+    <div class="background-carousel">
+        <div class="carousel-image" style="background-image: url('assets/logos/picone.png');"></div>
+        <div class="carousel-image" style="background-image: url('assets/logos/pictwo.png');"></div>
+        <div class="carousel-image" style="background-image: url('assets/logos/picthree.png');"></div>
+        <div class="carousel-image" style="background-image: url('assets/logos/picfour.png');"></div>
+        <div class="carousel-image" style="background-image: url('assets/logos/picfive.png');"></div>
+    </div>
     <div class="top-bar">
         <div class="logo-header">Community Team</div>
         <div class="status-wrapper">
