--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - Community Team</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/normal/alien.png">
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
