--- a/aboutme.html
+++ b/aboutme.html
@@ -9,11 +9,8 @@
 </head>
 <body>
     <div class="background-carousel">
-        <div class="carousel-image" style="background-image: url('assets/logos/picone.png');"></div>
-        <div class="carousel-image" style="background-image: url('assets/logos/pictwo.png');"></div>
-        <div class="carousel-image" style="background-image: url('assets/logos/picthree.png');"></div>
-        <div class="carousel-image" style="background-image: url('assets/logos/picfour.png');"></div>
-        <div class="carousel-image" style="background-image: url('assets/logos/picfive.png');"></div>
+        <div class="carousel-image" style="background-image: url('assets/logos/dark-plain.jpg');"></div>
+        <div class="carousel-image" style="background-image: url('assets/logos/dark-plain.jpg');"></div>
     </div>
     <div class="top-bar">
         <div class="logo-header">Community Team</div>
