--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 </head>
 <body>
     <div class="background-carousel">
-        <div class="carousel-image" style="background-image: url('assets/logos/picone.png');"></div>
-        <div class="carousel-image" style="background-image: url('assets/logos/pictwo.png');"></div>
-        <div class="carousel-image" style="background-image: url('assets/logos/picthree.png');"></div>
-        <div class="carousel-image" style="background-image: url('assets/logos/picfour.png');"></div>
-        <div class="carousel-image" style="background-image: url('assets/logos/picfive.png');"></div>
+        <div class="carousel-image" style="background-image: url('assets/logos/dark-plain.jpg');"></div>
+        <div class="carousel-image" style="background-image: url('assets/logos/dark-plain.jpg');"></div>
+
     </div>
 
     <div class="top-bar">
@@ -29,7 +27,7 @@
         <section class="hero">
             <div class="hero-left">
                 <div class="profile-wrap">
-                    <img src="assets/img/normal/alien.png" alt="Eve Kayser portrait" />
+                    <img src="assets/logos/fugaz.png" alt="Eve Kayser portrait" />
                 </div>
                 <div class="badge">Experts Developers </div>
             </div>
